more directory formatting

--- a/app/views/pages/directory.html.erb
+++ b/app/views/pages/directory.html.erb
@@ -1,4 +1,17 @@
-<h1>Directory</h1>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <title><%= title %></title>
+    <link href="/stylesheets/blueprint/screen.css" rel="stylesheet" type="text/css" />
+    <link href="/stylesheets/blueprint/print.css" media="print" rel="stylesheet" type="text/css" />
+    <!--[if lt IE 8]><link href="/stylesheets/blueprint/ie.css?1280990680" media="screen" rel="stylesheet" type="text/css" /><![endif]-->
+    <link href="/stylesheets/custom.css" media="screen,print" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+
+<div class="container">
+
 <div class="span-24 last dir-container">
   <div class="span-24 last dir-container-header"><h2>PTSA Council</h2></div>
   <div class="span-24 last dir-container-record">
@@ -26,7 +39,6 @@
   </div>
   <% end %>
 </div>
-
 <div class="span-24 last dir-container">
   <div class="span-24 last dir-container-header"><h2>Administrative Positions</h2></div>
   <div class="span-24 last dir-container-record">
@@ -119,3 +131,7 @@
     <% end %>
   </div>
 <% end %>
+</div>
+</body>
+</html>
+
