--- a/app/views/pages/directory.html.erb
+++ b/app/views/pages/directory.html.erb
@@ -13,39 +13,12 @@
 <div class="container">
 
 <div class="span-24 last dir-container">
-  <div class="span-24 last dir-container-header"><h2>PTSA Council</h2></div>
-  <div class="span-24 last dir-container-record">
-    <div class="span-8">Executive Board Positions</div>
-    <div class="span-8">Officer</div>
-    <div class="span-8 last">Email Addresses</div>
-  </div>
-  <% @ptsa_members_executive_board.each do |ptsa_member| %>
-  <div class="span-24 last dir-container-record">
-    <div class="span-8"><%= ptsa_member.position %></div>
-    <div class="span-8"><%= ptsa_member.display_name %></div>
-    <div class="span-8 last"><%= ptsa_member.email %></div>
-  </div>
-  <% end %>
-  <div class="span-24 last dir-container-record">
-    <div class="span-8">Board Positions</div>
-    <div class="span-8">Officer</div>
-    <div class="span-8 last">Email Addresses</div>
-  </div>
-  <% @ptsa_members_board.each do |ptsa_member| %>
-  <div class="span-24 last dir-container-record">
-    <div class="span-8"><%= ptsa_member.position %></div>
-    <div class="span-8"><%= ptsa_member.display_name %></div>
-    <div class="span-8 last"><%= ptsa_member.email %></div>
-  </div>
-  <% end %>
-</div>
-<div class="span-24 last dir-container">
   <div class="span-24 last dir-container-header"><h2>Administrative Positions</h2></div>
   <div class="span-24 last dir-container-record">
-    <div class="span-6">Position</div>
-    <div class="span-6">Location</div>
-    <div class="span-6">Name</div>
-    <div class="span-6 last">Email Addresses</div>
+    <div class="span-6"><strong>Position</strong></div>
+    <div class="span-6"><strong>Location</strong></div>
+    <div class="span-6"><strong>Name</strong></div>
+    <div class="span-6 last"><strong>Email Addresses</strong></div>
   </div>
   <% @teachers_administrative.each do |teacher| %>
   <div class="span-24 last dir-container-record">
@@ -60,11 +33,11 @@
 <div class="span-24 last dir-container">
   <div class="span-24 last dir-container-header"><h2>Classroom Teachers</h2></div>
   <div class="span-24 last dir-container-record">
-    <div class="span-3">Grade</div>
-    <div class="span-3">Location</div>
-    <div class="span-6">Position</div>
-    <div class="span-6">Name</div>
-    <div class="span-6 last">Email Addresses</div>
+    <div class="span-3"><strong>Gradei</strong></div>
+    <div class="span-3"><strong>Location</strong></div>
+    <div class="span-6"><strong>Position</strong></div>
+    <div class="span-6"><strong>Name</strong></div>
+    <div class="span-6 last"><strong>Email Addresses</strong></div>
   </div>
   <% @teachers_teacher.each do |teacher| %>
   <div class="span-24 last dir-container-record">
@@ -80,11 +53,11 @@
 <div class="span-24 last dir-container">
   <div class="span-24 last dir-container-header"><h2>Specialists and Support Staff</h2></div>
   <div class="span-24 last dir-container-record">
-    <div class="span-3">Grade</div>
-    <div class="span-3">Location</div>
-    <div class="span-6">Position</div>
-    <div class="span-6">Name</div>
-    <div class="span-6 last">Email Addresses</div>
+    <div class="span-3"><strong>Grade</strong></div>
+    <div class="span-3"><strong>Location</strong></div>
+    <div class="span-6"><strong>Position</strong></div>
+    <div class="span-6"><strong>Name</strong></div>
+    <div class="span-6 last"><strong>Email Addresses</strong></div>
   </div>
   <% @teachers_specialist.each do |teacher| %>
   <div class="span-24 last dir-container-record">
@@ -97,8 +70,50 @@
   <% end %>
 </div>
 
+<div class="span-24 last" style="page-break-after:always"></div>
+
+<div class="span-24 last dir-container">
+  <div class="span-24 last dir-container-header"><h2>PTSA Council</h2></div>
+  <div class="span-24 last dir-container-record">
+    <div class="span-8"><strong>Executive Board Positions</strong></div>
+    <div class="span-8"><strong>Officer</strong></div>
+    <div class="span-8 last"><strong>Email Addresses</strong></div>
+  </div>
+  <% @ptsa_members_executive_board.each do |ptsa_member| %>
+  <div class="span-24 last dir-container-record">
+    <div class="span-8"><%= ptsa_member.position %></div>
+    <div class="span-8"><%= ptsa_member.display_name %></div>
+    <div class="span-8 last"><%= ptsa_member.email %></div>
+  </div>
+  <% end %>
+
+  <div class="span-24 last">&nbsp;</div>
+
+  <div class="span-24 last dir-container-record">
+    <div class="span-8"><strong>Board Positions</strong></div>
+    <div class="span-8"><strong>Officer</strong></div>
+    <div class="span-8 last"><strong>Email Addresses</strong></div>
+  </div>
+  <% @ptsa_members_board.each do |ptsa_member| %>
+  <div class="span-24 last dir-container-record">
+    <div class="span-8"><%= ptsa_member.position %></div>
+    <div class="span-8"><%= ptsa_member.display_name %></div>
+    <div class="span-8 last"><%= ptsa_member.email %></div>
+  </div>
+  <% end %>
+</div>
+
+<% grade = "" %>
 
 <% @teachers_teacher.each do |teacher| %>
+  <% next if teacher.students.count == 0 %>
+  <%= 
+    if grade != teacher.grade 
+      grade = teacher.grade
+      '<div class="span-24" style="page-break-before:always"></div>'
+    end
+  %>
+
   <div class="span-24 last dir-container">
     <div class="span-24 last dir-container-header">
       <div class="span-4">Room: <%= teacher.location %><br>Grade: <%= teacher.grade %></div>
@@ -117,6 +132,11 @@
       <div class="span-24 last dir-container-record">
         <div class="span-4" ><%= student.display_name %>&nbsp;</div>
         <div class="span-19">
+        <%= 
+          if student.parents.count == 0 
+            '&nbsp;' 
+          end 
+        %>
         <% student.parents.each do |parent| %>
           <div class="span-19 last">
             <div class="span-4"><%= parent.display_name %>&nbsp;</div>
