--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,7 +1,6 @@
 .dir-container {
-  margin-bottom:20px;
-  margin-top:20px;
-  float: none;
+  margin-bottom:10px;
+  margin-top:10px;
 }
 
 .dir-container-header {
@@ -24,6 +23,18 @@ td {
   padding-right:1px;
   padding-top:0px;
 }
+
+th {
+  padding-bottom:0px;
+  padding-left:1px;
+  padding-right:1px;
+  padding-top:0px;
+}
+
+h2 {
+  margin-bottom: 0px;
+}
+
 
 .navigation {
   float: right;
