--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -17,6 +17,7 @@
   <dd>Show cell phone: <b><%= @parent.show_cell_phone %></b></dd>
   <dd>Yahoo mailing list: <b><%= @parent.mailing_list %></b></dd>
   <dd>PTSA Member: <b><%= @parent.ptsa_member %></b></dd>
+  <dd>PTSA Member Id: <b><%= @parent.ptsa_member_id %></b></dd>
   <dd>Publish in directory: <b><%= @parent.publish %></b></dd>
 </dl>
 <fieldset>
