messing with reports

--- a/app/views/ptsa_members/index.html.erb
+++ b/app/views/ptsa_members/index.html.erb
@@ -1,7 +1,7 @@
-<h1>PTSA Members</h1>
+<h1>PTSA Board Members</h1>
 <p><%= notice %></p>
 <fieldset>
-  <legend>PTSA Member List</legend>
-  <p><%= link_to 'New PTSA Member', new_ptsa_member_path %></p>
+  <legend>PTSA Board Member List</legend>
+  <p><%= link_to 'New PTSA Board Member', new_ptsa_member_path %></p>
   <%= render 'layouts/ptsa_member_list' %>
 </fieldset>
