--- a/app/views/ptsa_members/show.html.erb
+++ b/app/views/ptsa_members/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Show PTSA Member</h1>
+<h1>Show PTSA Board Member</h1>
 <p><%= notice %></p>
 <fieldset>
 <legend><%= "#{@ptsa_member.display_name}" %> - <%= link_to 'Edit', edit_ptsa_member_path(@ptsa_member) %></legend>
