create ptsa board

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
     <li><%= link_to "Parents", parents_path %></li>
     <li><%= link_to "Students", students_path %></li>
     <li><%= link_to "Teachers", teachers_path %></li>
-    <li><%= link_to "PTSA Board", ptsa_members_path %></li>
+    <li><%= link_to "PTSA Board", ptsa_board_members_path %></li>
     <li><%= link_to "Directory", directory_path, :popup => true %></li>
   </ul>
 </div>
