--- a/app/views/layouts/_ptsa_board_member_form.erb
+++ b/app/views/layouts/_ptsa_board_member_form.erb
@@ -1,8 +1,8 @@
-<% form_for(@ptsa_member) do |f| %>
+<% form_for(@ptsa_board_member) do |f| %>
   <%= f.error_messages %>
 
 <fieldset>
-  <legend><%= "#{@ptsa_member.display_name}" %></legend>
+  <legend><%= "#{@ptsa_board_member.display_name}" %></legend>
   <div class="field">
     <%= f.label :first_name %><br />
     <%= f.text_field :first_name %>
@@ -25,7 +25,7 @@
 
   <div class="field">
     <%= f.label :position_type %><br />
-    <%= f.select :position_type, @ptsa_member.position_types, { :include_blank => true } %>
+    <%= f.select :position_type, @ptsa_board_member.position_types, { :include_blank => true } %>
   </div>
 </fieldset>
 
