--- a/app/views/pages/ptsa_members.html.erb
+++ b/app/views/pages/ptsa_members.html.erb
@@ -1,3 +1,11 @@
 <h1>PTSA Members</h1>
-<h2>Parents</h2>
+<fieldset>
+  <legend>Parents</legend>
+  <%= render 'layouts/parent_list' %>
+</fieldset>
+
+<fieldset>
+  <legend>Students</legend>
+  <%= render 'layouts/student_list' %>
+</fieldset>
 
