--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,10 @@
     <li><%= link_to "Students", students_path %></li>
     <li><%= link_to "Teachers", teachers_path %></li>
     <li><%= link_to "PTSA Board", ptsa_board_members_path %></li>
-    <li><%= link_to "Directory", directory_path, :popup => true %></li>
+    <li><%= link_to "PTSA Members", ptsa_members_path %></li>
+    <li><%= link_to "Yearbook Orders", yearbook_orders_path %></li>
+    <!-- <li><%= link_to "Directory", directory_path, :popup => true %></li> -->
+    <li><%= link_to "Directory", directory_path %></li>
   </ul>
 </div>
 
