teacher ptsa, mailing list

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,7 @@
     <li><%= link_to "PTSA Board", ptsa_board_members_path %></li>
     <li><%= link_to "PTSA Members", ptsa_members_path %></li>
     <li><%= link_to "Yearbook Orders", yearbook_orders_path %></li>
+    <li><%= link_to "Mailing List", mailing_list_path %></li>
     <!-- <li><%= link_to "Directory", directory_path, :popup => true %></li> -->
     <li><%= link_to "Directory", directory_path %></li>
   </ul>
