--- a/app/views/layouts/_parent_form.erb
+++ b/app/views/layouts/_parent_form.erb
@@ -3,66 +3,116 @@
 
 <fieldset>
   <legend><%= "#{@parent.display_name}" %></legend>
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name %>
-  </div>
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %><br />
-  </div>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %><br />
-  </div>
-  <div class="field">
-    <%= f.label :home_phone %><br />
-    <%= f.text_field :home_phone %><br />
-  </div>
-  <div class="field">
-    <%= f.label :cell_phone %><br />
-    <%= f.text_field :cell_phone %><br />
-  </div>
+  <table>
+    <tr>
+      <td>
+        <div class="field">
+          <%= f.label :last_name %><br />
+          <%= f.text_field :last_name %>
+       </div>
+      </td>
+      <td>
+        <div class="field">
+          <%= f.label :first_name %><br />
+          <%= f.text_field :first_name %><br />
+        </div>
+      </td>
+      <td>
+        <div class="field">
+          <%= f.label :email %><br />
+          <%= f.text_field :email %><br />
+        </div>
+      </td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>
   <div class="field">
     <%= f.label :address_line_1 %><br />
     <%= f.text_field :address_line_1 %><br />
   </div>
+
+      </td>
+      <td>
   <div class="field">
     <%= f.label :address_line_2 %><br />
     <%= f.text_field :address_line_2 %><br />
   </div>
+
+      </td>
+      <td>
   <div class="field">
     <%= f.label :city %><br />
     <%= f.text_field :city %><br />
   </div>
+
+      </td>
+      <td>
   <div class="field">
     <%= f.label :state %><br />
     <%= f.text_field :state %><br />
   </div>
+
+      </td>
+      <td>
   <div class="field">
     <%= f.label :zip %><br />
     <%= f.text_field :zip %><br />
   </div>
-  <div class="field">
-    <%= f.label :show_cell_phone, "Show Cell Phone?" %><br />
-    <%= f.check_box :show_cell_phone %><br />
-  </div>
-  <div class="field">
-    <%= f.label :mailing_list, "Include in Yahoo Mailing List?" %><br />
-    <%= f.check_box :mailing_list %><br />
-  </div>
-  <div class="field">
-    <%= f.label :ptsa_member, "PTSA Member?" %><br />
-    <%= f.check_box :ptsa_member %><br />
-  </div>
-      <div class="field">
-    <%= f.label :ptsa_member_id, "PTSA Member Id" %><br />
-    <%= f.text_field :ptsa_member_id, :maxlength => 10 %><br />
-  </div>
-  <div class="field">
-    <%= f.label :publish, "Publish in Directory?" %><br />
-    <%= f.check_box :publish %><br />
-  </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <div class="field">
+          <%= f.label :home_phone %><br />
+          <%= f.text_field :home_phone %><br />
+        </div>
+      </td>
+      <td>
+        <div class="field">
+          <%= f.label :cell_phone %><br />
+          <%= f.text_field :cell_phone %><br />
+        </div>
+      </td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>
+        <div class="field">
+          <%= f.check_box :publish %>
+          <%= f.label :publish, "Show parent in directory?" %><br />
+        </div>
+      </td>
+      <td>
+        <div class="field">
+          <%= f.check_box :show_cell_phone %>
+          <%= f.label :show_cell_phone, "Show cell phone in directory?" %><br />
+        </div>
+      </td>
+      <td>
+        <div class="field">
+          <%= f.check_box :mailing_list %>
+          <%= f.label :mailing_list, "Include email in mailing list?" %><br />
+        </div>
+      </td>
+      <td>
+        <div class="field">
+        <%= f.check_box :ptsa_member %>
+        <%= f.label :ptsa_member, "PTSA member?" %><br />
+      </div>
+      </td>
+      <td>
+        <div class="field">
+          <%= f.label :ptsa_member_id, "PTSA member id:" %>
+          <%= f.text_field :ptsa_member_id, :maxlength => 10 %><br />
+        </div>
+      </td>
+    </tr>
+  </table>
+
 <fieldset>
   <legend>Children</legend>
   <% i = 0 %>
