--- a/app/views/pages/directory.html.erb
+++ b/app/views/pages/directory.html.erb
@@ -117,6 +117,7 @@
       <td>
         <table style="width:0%; margin-bottom:0px;">
           <% student.parents.each do |parent| %>
+          <% next if ! parent.publish? %>
           <tr>
             <td style="width:150px;"><%= parent.display_name %></td>
             <td style="width:90px;" ><%= parent.home_phone %></td>
