--- a/app/views/pages/yearbook_orders.html.erb
+++ b/app/views/pages/yearbook_orders.html.erb
@@ -10,7 +10,7 @@
       <td><%= link_to student.display_name, student %></td>
       <td><%= student.yearbook_qty %></td>
       <td><%=h student.grade %></td>
-      <td><%= link_to student.teacher.display_name, student.teacher %></td>
+      <td><%= link_to student.teacher.display_name, student.teacher if student.teacher %></td>
       <td><%= link_to 'Edit', edit_student_path(student) %></td>
     </tr>
 <% end %>
