--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -14,11 +14,11 @@
   <dd><%=h @parent.address_line_2 %></dd>
   <dd><%=h "#{@parent.city} #{@parent.state}, #{@parent.zip}" %></dd>
   <dt>Properties</dt>
-  <dd>Show cell phone: <b><%= @parent.show_cell_phone %></b></dd>
-  <dd>Yahoo mailing list: <b><%= @parent.mailing_list %></b></dd>
-  <dd>PTSA Member: <b><%= @parent.ptsa_member %></b></dd>
+  <dd>Show cell phone: <b><%= @parent.show_cell_phone ? 'yes' : 'no' %></b></dd>
+  <dd>Yahoo mailing list: <b><%= @parent.mailing_list ? 'yes' : 'no'%></b></dd>
+  <dd>PTSA Member: <b><%= @parent.ptsa_member ? 'yes' : 'no' %></b></dd>
   <dd>PTSA Member Id: <b><%= @parent.ptsa_member_id %></b></dd>
-  <dd>Publish in directory: <b><%= @parent.publish %></b></dd>
+  <dd>Publish in directory: <b><%= @parent.publish  ? 'yes' : 'no' %></b></dd>
 </dl>
 <fieldset>
 <legend>Children</legend>
