--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -8,13 +8,13 @@
     <dt>Grade</dt>
     <dd><%= @student.grade %></dd> 
     <dt>Teacher</dt>
-    <dd><%= link_to @student.teacher.display_name, @student.teacher %></dd> 
+    <dd><%= link_to @student.teacher.display_name, @student.teacher if @student.teacher %></dd> 
     <dt>Room</dt>
-    <dd><%= @student.teacher.location %></dd> 
+    <dd><%= @student.teacher.location if @student.teacher %></dd> 
     <dt>Properties</dt>
-      <dd>PTSA Member: <b><%= @student.ptsa_member %></b></dd>
-      <dd>PTSA Member Id: <b><%= @student.ptsa_member_id %></b></dd>
-      <dd>Yearbook: <b><%= @student.yearbook %></b></dd>
+      <dd>PTSA Member: <b><%= @student.ptsa_member ? 'yes' : 'no' %></b></dd>
+      <dd>PTSA Member Id: <b><%= @student.ptsa_member_id ? 'yes' : 'no' %></b></dd>
+      <dd>Yearbook: <b><%= @student.yearbook ? 'yes' : 'no' %></b></dd>
       <dd>Yearbook Qty: <b><%= @student.yearbook_qty %></b></dd>
     
   </dl>
